Enable font-provided small caps w/ native HarfBuzz 3.0.0 lib
Also implement the following changes:
 - Support petite caps, which are small caps as large as the x-height.
 - If enough information is available and a font does not support small
   caps by itself, simulate them based on the x-height and cap-height
   instead of a fixed scaling constant.
 - No longer allow the user to manually specify the size of simulated
   small caps since that feature seems unnecessary now.
 - Directly access sun.font packages where code is publicly accessible
   instead of relying on MethodHandles.
 - Let JavaCPP extract its natives into a temp folder instead of the
   user's home directoy.